fixed spacing

--- a/events.css
+++ b/events.css
@@ -33,7 +33,6 @@
 
 .textOverlay h2 {
     font-weight: bold;
-    font-size: 4vw;
 }
 
 @media (max-width: 1200px) {
