--- a/style.css
+++ b/style.css
@@ -259,7 +259,7 @@ body {
 .innerBookDiv > div {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   gap: 5px;
 }
 
@@ -269,8 +269,8 @@ body {
 
 .heartIcon {
   fill: #37474f;
-  width: 24px;
-  height: 24px;
+  width: 20px;
+  height: 20px;
   cursor: pointer;
 }
 
@@ -856,7 +856,7 @@ footer {
 
 .logo-circle p {
   font-size: 14px;
-  color: #555;
+  color: black;
 }
 
 .about,
@@ -867,7 +867,7 @@ footer {
 .about h3,
 .contact h3 {
   font-size: 18px;
-  color: #333;
+  color: black;
   margin-bottom: 5px;
   margin-top: 15px;
   font-weight: bold;
@@ -926,6 +926,9 @@ footer {
   .sectionsContent {
     height: 176dvh;
   }
+  .merchSection>p{
+    width: 40vw;
+  }
 }
 
 @media (max-width: 1090px) {
@@ -952,6 +955,9 @@ footer {
   .secondSection > div > p {
     max-width: 95%;
   }
+  .merchSection>p{
+    width: 55dvw;
+  }
 }
 @media (max-width: 980px) {
   .secondSection {
@@ -972,9 +978,6 @@ footer {
     /* margin-top: 5%; */
     margin-left: 10.5%;
   }
-  .sectionHeader {
-    font-size: 20px;
-  }
 }
 @media (max-width: 920px) {
   .firstSection > div > p {
@@ -990,6 +993,9 @@ footer {
   .sectionsContent {
     background-position-y: 30%;
     height: 160dvh;
+  }
+  .merchSection>p{
+    width: 65dvw;
   }
 }
 @media (max-width: 855px) {
@@ -1035,17 +1041,31 @@ footer {
   .secondSection > img:nth-child(1) {
     display: none;
   }
-}
-@media (max-width:650px) {
   .product-container{
     flex-direction: column;
     align-items: center;
+  }
+}
+@media (max-width:650px) {
+  .sectionHeader {
+    font-size: 20px;
+  }
+  section>p, .secondSection > div > p, .besellingBooksSection > div > p{
+    font-size: 15px;
   }
   footer{
     background-image: none;
     background-color: #f1eae4;
     height: fit-content;
     margin-top: 0;
+  }
+  .merchSection>p{
+    width: 75dvw;
+  }
+  .homePageBtn {
+    color: #f1eae4;
+    font-size: 12px;
+
   }
 }
 @media (max-width: 600px) {
